users path and search movie route
