# expworld/routes/index.js
@@ -21,19 +21,6 @@ router.get("/api/city", function (req, res, next) {
     });
 });
 
-router.get("/api/movie", function (req, res, next) {
-  req.db
-    .from("basics")
-    .select("primaryTitle", "year")
-    .then((rows) => {
-      res.json({ Error: false, Message: "Success", City: rows });
-    })
-    .catch((err) => {
-      console.log(err);
-      res.json({ Error: true, Message: "Error in MySQL query" });
-    });
-});
-
 router.post("/api/city/update", authorization, function (req, res, next) {
   // const jwt = authorization.jwt
   if (!req.body.Name || !req.body.CountryCode || !req.body.Population) {
@@ -66,7 +53,7 @@ router.post("/api/city/update", authorization, function (req, res, next) {
 router.get("/api/city/:CountryCode", function (req, res, next) {
   req.db
     .from("city")
-    .select("*")
+    .select()
     .where("CountryCode", "=", req.params.CountryCode)
     .then((rows) => {
       res.json({ Error: false, Message: "Success", City: rows });
@@ -80,15 +67,83 @@ router.get("/api/city/:CountryCode", function (req, res, next) {
 router.get("/api/movie/:CountryCode", function (req, res, next) {
   req.db
     .from("basics")
-    .select("*")
+    .select()
     .where("country", "=", req.params.CountryCode)
     .then((rows) => {
-      res.json({ Error: false, Message: "Success", City: rows });
+      res.json({ Error: false, Message: "Success", Movie: rows });
     })
     .catch((err) => {
       console.log(err);
       res.json({ Error: true, Message: "Error in MySQL query" });
     });
 });
+router.get("/movies/data/:imdbID", function (req, res, next) {
+  req.db
+    .from("basics")
+    .select()
+    .where("tconst", "=", req.params.imdbID)
+    .then((rows) => {
+      res.json({ Error: false, Message: "Success", Movie: rows });
+    })
+    .catch((err) => {
+      console.log(err);
+      res.json({ Error: true, Message: "Error in MySQL query" });
+    });
+});
+router.get("/people/", function (req, res, next) {
+  req.db
+    .from("principals")
+    .select()
+    .then((rows) => {
+      res.json({ Error: false, Message: "Success", Movie: rows });
+    })
+    .catch((err) => {
+      console.log(err);
+      res.json({ Error: true, Message: "Error in MySQL query" });
+    });
+});
+router.get("/people/:ID", authorization, function (req, res, next) {
+  req.db
+    .from("principals")
+    .select()
+    .where("nconst", "=", req.params.ID)
+    .then((rows) => {
+      res.json({ Error: false, Message: "Success", Movie: rows });
+    })
+    .catch((err) => {
+      console.log(err);
+      res.json({ Error: true, Message: "Error in MySQL query" });
+    });
+});
+router.get("/movies/search", function (req, res, next) {
+  if (!req.body.primaryTitle) {
+    req.db
+      .from("basics")
+      .select()
+      .then((rows) => {
+        res.json({ Error: false, Message: "Success", Movie: rows });
+      })
+      .catch((err) => {
+        console.log(err);
+        res.json({ Error: true, Message: "Error in MySQL query" });
+      });
 
+  }
+  else {
+    const name = req.body.primaryTitle;
+    console.log(name)
+    req.db
+      .from("basics")
+      .select()
+      .where("primaryTitle", "LIKE", `%${name}%`)
+      .then((rows) => {
+        res.json({ Error: false, Message: "Success", Movie: rows });
+      })
+      .catch((err) => {
+        console.log(err);
+        res.json({ Error: true, Message: "Error in MySQL query" });
+      });
+  }
+
+});
 module.exports = router;
